Remove code wrapping, fix margin

--- a/app/assets/stylesheets/_components.sass
+++ b/app/assets/stylesheets/_components.sass
@@ -23,6 +23,7 @@ a
     +shadow
     +mobile
       min-width: 0
+      margin-right: 0
     h1:first-of-type
       a
         color: inherit
@@ -164,7 +165,6 @@ form
       width: 100%
       box-sizing: border-box
       line-height: 1.6
-      white-space: pre-wrap
       overflow: auto
       +mobile
         padding: 1em
